# clinical-survival-ml

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  conda-lock.yml  deploy.sh  distributed_config.json  docker-compose.yml  incremental_config.json  install.sh  params.yaml  pyproject.toml  requirements.txt  test_monitoring.py
clinical-survival-ml/: AGENTS.md  Dockerfile  LICENSE  pyproject.toml
clinical-survival-ml/configs/: params.yaml
clinical-survival-ml/env/: environment.yml  requirements.txt
clinical-survival-ml/notebooks/: exploration.ipynb  report_notebook.ipynb
clinical-survival-ml/src/clinical_survival/: cli.py  eval.py  explain.py  io.py  models.py  preprocess.py  report.py  tuning.py  utils.py
clinical-survival-ml/tests/: test_cli.py  test_eval.py  test_explain.py  test_external.py  test_io.py  test_models.py  test_preprocess.py
configs/: distributed_config.json  features.yaml  incremental_config.json  model_grid.yaml  params.yaml  report_template.html.j2  toy_expectation_suite.json
data/toy/: metadata.yaml  metadata.yaml.dvc  toy_survival.csv  toy_survival.csv.dvc
docs/: api_reference.md  cli_reference.md  conf.py  getting_started.md  index.md  index.rst  installation.md  methods 2.md  quickstart-tutorial.md  quickstart.md  testing-framework.md  user_guide.md
docs/api/: clinical_survival.rst  index.rst  modules.rst
env/: environment.yml
examples/: README.md
examples/plugins/custom_model/: README.md  pyproject.toml
examples/plugins/custom_model/custom_model/: models.py
examples/toy/: run_toy.sh
great_expectations/: great_expectations.yml
integration/: test_clinical_interpretability.py  test_incremental_learning.py  test_mlops.py
scripts/: create_expectations.py  export_artifacts 2.py  generate_synthetic 2.py  smoke_api.sh
src/clinical_survival/: __init__.py  artifact_manifest.py  automl.py  caching.py  checkpoint.py  cli.py  clinical_interpretability.py  config.py  config_models.py  config_validation.py  counterfactual.py  cv_integrity.py  dashboard.py  data_profiling.py  data_quality.py  data_validation.py  diagnostics.py  distributed.py  ensembles 2.py  error_handling.py  errors.py  eval.py  explain 2.py  explain.py  gpu_utils.py  incremental_learning.py  inference.py  io 2.py  io.py  logging_config.py  logging_utils 2.py  mlops.py  model_plugins.py  model_registry.py  model_selection.py  models 2.py  models.py  monitoring 2.py  monitoring.py  performance_monitor.py  (+16 more)
src/clinical_survival/api/: service.py
src/clinical_survival/cli/: api.py  commands 2.py  commands.py  dashboard.py  data.py  inference.py  main 2.py  main.py  mlops.py  monitoring.py  testing.py  training.py
src/clinical_survival/data/: synthetic.py
src/clinical_survival/explainability/: shap_explainer.py
src/clinical_survival/metrics/: __init__.py  ibs.py  time_dependent_calibration.py
src/clinical_survival/monitoring/: data_quality_monitor.py  drift.py
src/clinical_survival/pipeline/: counterfactual_explainer.py  data_loader.py  data_validator.py  evaluator.py  explainer.py  orchestrator.py  preprocessor.py  registrar.py  schemas.py  trainer.py  training_loop.py  tuner.py  validator.py
src/clinical_survival/preprocess/: builder.py  components.py
tests/: conftest.py  test_calibration_ipcw 2.py  test_calibration_ipcw.py  test_cli_config.py  test_cv_leakage.py  test_decision_curve.py  test_ensembles.py  test_metrics_oof 2.py  test_metrics_oof.py  test_monitoring 2.py  test_monitoring.py  test_seed.py  test_xgb_aft.py
tests/integration/: test_api_deployment.py  test_clinical_interpretability.py  test_data_quality.py  test_distributed_computing.py  test_end_to_end.py  test_error_handling.py  test_incremental_learning.py  test_large_dataset.py  test_mlops.py  test_monitoring_pipeline.py  test_pipeline_e2e.py
tests/property/: test_stratified_split.py  test_utils_properties.py
