[tool.poetry]
name = "clinical-survival-ml"
version = "0.1.0"
description = "Clinical outcomes survival modeling pipeline"
readme = "README.md"
authors = ["Clinical-Survival-ML Team"]
license = "MIT"
packages = [{include = "clinical_survival", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = ">=1.3.0"
scikit-survival = "^0.23.0"
lifelines = "^0.28.0"
xgboost = "^2.0.3"
shap = "^0.45.0"
pyyaml = "^6.0"
jinja2 = ">=3.1,<3.2"
matplotlib = ">=3.7,<3.9"
seaborn = ">=0.12,<0.14"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
evidently = "^0.4.21"
scipy = "^1.14.0"
pydantic = "^2.0"
mlflow = "^2.9.2"
python-json-logger = ">=2.0"
typer = {extras = ["rich"], version = "^0.12.3"}
joblib = "^1.4.2"
great-expectations = "^0.18.13"
dvc = {extras = ["s3"], version = "^3.50.1"}
optuna = "^3.6.1"
dice-ml = "^0.11"
streamlit = "^1.36.0"
plotly = "^5.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "==0.6.8"
black = "==24.8.0"
mypy = "==1.11.2"
hypothesis = "^6.100.3"
sphinx = "^7.0"
sphinx-rtd-theme = "^2.0"
myst-parser = "^2.0"
sphinx-autodoc-typehints = "^2.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
sphinx-rtd-theme = "^1.3"
myst-parser = "^2.0"
sphinx-autodoc-typehints = "^1.24"

[tool.poetry.extras]
gpu = [
  "cuml>=23.08,<24.12",
  "cudf>=23.08,<24.12",
  "dask-cuda>=23.08,<24.12",
  "dask[complete]>=2023.8,<2024.12"
]
automl = [
  "optuna>=3.0,<4.0",
]

[tool.poetry.scripts]
clinical-ml = "clinical_survival.cli.main:main_with_error_handling"

[tool.poetry.plugins."clinical_survival.models"]
"coxph" = "clinical_survival.models:CoxPHModel"

[tool.poetry.plugins."clinical_survival.preprocessors"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --cov=src/clinical_survival --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["E501", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["clinical_survival"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict = true
ignore_missing_imports = true
exclude = ["notebooks/", "tests/"]
plugins = ["pydantic.mypy"]

# Pydantic mypy plugin settings
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
