[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "clinical-survival-custom-model"
version = "0.1.0"
description = "An example plugin for the clinical-survival framework."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "*"

[tool.poetry.plugins."clinical_survival.models"]
"custom_svm" = "custom_model.models:CustomSVM"
